[package]
name = "cs2d-map-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4.14"
byteorder = "1.5.0"
strum = { version = "0.28", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kira = "0.12.0"

[profile.release]
opt-level = "z"      # Optimize strictly for binary size
lto = true           # Enable Link-Time Optimization (crucial for WASM)
codegen-units = 1    # Allows LLVM to optimize and inline much better
panic = "abort"      # Removes panic string formatting and unwinding code
strip = true         # Automatically strips symbols and debug info (Rust 1.59+)