[package]
name = "cs2d-map-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4"
image = { version = "0.24", default-features = false, features = ["jpeg", "bmp"] } # required for jpeg and bmp support
byteorder = "1.5"
strum = { version = "0.28", features = ["derive"] }
zip = { version = "8.6", default-features = false, features = ["deflate"] }
const-str = "1.1"
egui-macroquad = { version = "0.17.3", default-features = false }
egui = "0.31.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kira = "0.12"

[profile.release]
opt-level = "z"      # Optimize ("z" = size, "s" = speed)
lto = true           # Enable Link-Time Optimization (crucial for WASM)
codegen-units = 1    # Allows LLVM to optimize and inline much better
panic = "abort"      # Removes panic string formatting and unwinding code
strip = true         # Strip symbols

[features]
r2tex = [] # Render game content to a texture instead of doing a direct render